test/syntaxerrors/TestMisspelledAccessModifier.jdc
pblic class TestMisspelledAccessModifier {
    public static void main(String[] args) {
        System.out.println("Blah");
    }
}